Use Java 17 language features